--- a/src/components/EventCard.astro
+++ b/src/components/EventCard.astro
@@ -1,39 +1,38 @@
 ---
 //Props er en stedholder for vores ting fra databasen
+const { image, name, price, date, place, type, status, tags, slug } = Astro.props;
 
 import Button from "./Button.astro"
-const { state } = Astro.props;
 ---
 
-<a id="event" class={state} href="/">
-    <article>
+    <article class={status}>
         <div class="hvem">
             <div class="kunstner">
                 <div class="billede">
                     <span class="tekst">Udsolgt</span>
-                    <img src="/public/img/jens_jacob_BW.png" alt="billede af artisten">
+                    <img src={image} alt="billede af artisten">
                 </div>
-                <h3>Navn på event</h3>
+                <h3>{name}</h3>
             </div>
             <div class="type">
-                <p>Type</p>
+                <p>{type}</p>
             </div>
         </div>
         <div class="information">
             <div class="place">
-                <p class="dato">Datoen</p>
-                <p class="sted">Sted</p>
+                <p class="dato">{date}</p>
+                <p class="sted">{place}</p>
             </div>
             <div class="omPris">
                 <span class="tilbage">Få tilbage!</span>
             <div class="price">
-                <p class="pris"> pris kr.</p>
+                <p class="pris">{price} kr.</p>
             </div>
             </div>
         </div>
         <div class="knap">
-        <Button variant="primary">Køb billet</Button>
-        <Button variant="tertiary">Læs mere</Button>
+        <Button variant="primary"><a href={`../../artist/${slug}`}>Køb billet</a></Button>
+        <Button variant="tertiary"><a href={`../../artist/${slug}`}>Læs mere</a></Button>
         </div>
     </article>
 </a>
@@ -161,6 +160,11 @@ const { state } = Astro.props;
         width: 20.625rem;
     }
 
+    .knap a {
+        color: var(--color-button-primary);
+        font-size: var(--Button-small);
+    }
+
     .udsolgt .billede {
         width: 20rem;
         height: 20rem;
@@ -183,7 +187,7 @@ const { state } = Astro.props;
         left: 10%;
     }
 
-    .fåtilbage .tilbage {
+    .faatilbage .tilbage {
         color: var(--color-card-text-few-left);
         font-size: var(--Label-large);
         font-style: italic;
