--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -31,7 +31,7 @@ import SocialIcon from "./SocialIcon.astro";
             <input type="email" placeholder=" info@kanonproduktion.dk" required />
             <br />
           
-            <Button variant="primary">Tilmeld</Button>
+            <Button size="sm" link="/" variant="primary">Tilmeld</Button>
      
           </form>
     </div>
@@ -70,7 +70,6 @@ import SocialIcon from "./SocialIcon.astro";
     font-size: var( --Body-large);
     text-decoration: none;
     padding-top: 3%;
-    
   }
 
   a{
