--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -25,3 +25,9 @@ const { title } = Astro.props;
     <Footer />
   </body>
 </html>
+
+<style>
+  body {
+    background-color: var(--color-background-body);
+  }
+</style>
