--- a/src/pages/artister.astro
+++ b/src/pages/artister.astro
@@ -33,6 +33,7 @@ import Sti from "../components/Sti.astro";
 <style>
     section {
         padding-inline: var(--gap11);
+        padding-bottom: var(--gap11);
     }
     .artister{
         display: flex;
