--- a/src/components/ArtistCard.astro
+++ b/src/components/ArtistCard.astro
@@ -74,11 +74,12 @@ const {image, name, insta, face} = Astro.props;
         font-size: var(--Headline3-medium);
     }
     .social-links i {
-          font-size: var(--Headline3-medium);
+          font-size: var(--Headline3-large);
           
         }
         .social-links{
  padding-top: 1rem;
+ gap: 2rem;
     }
         }
 
@@ -98,6 +99,7 @@ const {image, name, insta, face} = Astro.props;
 
         .social-links{
  padding-top: 1rem;
+ gap: 1rem;
     }
   
   
