--- a/src/pages/artister.astro
+++ b/src/pages/artister.astro
@@ -68,20 +68,25 @@ padding-top: 2rem;
     }
     h1{
       font-size: var(--Headline1-medium);
+      padding-left: 0rem;
     }
 
     h3{
       font-size: var(--Headline3-medium);
+      padding-left: 0rem;
     }
     }
 
     @media (max-width: 430px) {
     h1{
       font-size: var(--Headline1-small);
+      padding-left: 0rem;
+    
     }
 
     h3{
       font-size: var(--Headline4-small);
+      padding-left: 0rem;
     }
     }
 </style>
