--- a/src/components/EventCard.astro
+++ b/src/components/EventCard.astro
@@ -1,6 +1,7 @@
 ---
 //Props er en stedholder for vores ting fra databasen
 const { image, name, price, date, place, type, status, slug, link } = Astro.props;
+console.log("Status:", status); 
 
 import Button from "./Button.astro"
 ---
@@ -31,11 +32,10 @@ import Button from "./Button.astro"
             </div>
         </div>
         <div class="knap">
-            <Button size="sm" link={`${link}`} variant="primary">Køb billet</Button>
+            <Button size="sm" link=`${link}` variant="primary">Køb billet</Button>
             <Button size="sm" link={`../../artist/${slug}`} variant="tertiary">Læs mere</Button>
         </div>
     </article>
-</a>
 
 <style>
 
