--- a/src/pages/events.astro
+++ b/src/pages/events.astro
@@ -25,7 +25,17 @@ import Button from "../components/Button.astro";
                 <h1>Events</h1>
                 <h3>Se kommende events her og lad dig inspirere.</h3>
             </div>
-        <div class="sti"></div>
+            <div class="sti">
+                <div class="kommende">
+                    <a href="/events">Kommende events</a>
+                </div>
+                <div class="tidligere">
+                    <a href="/tidligere">Tidligere events</a>
+                </div>
+                <div class="artister">
+                    <a href="/artister">Artister</a>
+                </div>
+            </div>
         </article>
     </section>
     <div id="animated-text-strip">
@@ -104,10 +114,57 @@ import Button from "../components/Button.astro";
         padding-block: 74px;
     }
 
+    a {
+        font-size: var(--Label-large);
+        font-weight: 900;
+        color: var(--color-text-body);
+        outline-style: solid;
+        outline-color: var(--color-background-stroke);
+        outline-width: 2px;
+
+        display: flex;
+        padding: var(--gap3) var(--gap2);
+        justify-content: center;
+        align-items: center;
+    }
+
+    a:hover {
+        color: var(--color-background-button-hover);
+        background-color: var(--color-background-stroke);
+        outline-style: solid;
+        outline-color: var(--color-background-stroke);
+        outline-width: 2px;
+    }
+    
+    .sti{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: var(--gap3);
+    }
+
+    .kommende a {
+        background-color: var(--color-background-button-secondary);
+        outline-style: solid;
+        outline-color: var(--color-background-button-hover);
+        outline-width: 2px;
+        color: var(--color-background-button-hover);
+    }
+
+    .kommende a:hover {
+        background-color: var(--color-button-primary);
+        color: var(--color-background-button-secondary);
+        outline-style: solid;
+        outline-color: var(--color-background-button-secondary);
+        outline-width: 2px;
+    }
+
     .text {
         display: flex;
         flex-direction: column;
         gap: 24px;
+
+        padding-bottom: var(--gap7);
     }
 
     .text h3 {
@@ -184,14 +241,6 @@ import Button from "../components/Button.astro";
         background-color: var(--color-background-stroke);
         margin-bottom: 5px;
     }
-
-
-
-.text-scroll {
-    padding: var(--gap7) 0px;
-    border-top: 2px solid var(--Color-Background-Stroke, #1E1E1E);
-border-bottom: 2px solid var(--Color-Background-Stroke, #1E1E1E);
-}
     
     .artister {
 		display: flex;
