--- a/src/pages/tidligere.astro
+++ b/src/pages/tidligere.astro
@@ -5,7 +5,17 @@ import TidligereCard from "../components/TidligereCard.astro";
 <section class="intro">
     <h1>Tidligere events</h1>
     <h3>Se tidligere events og skab dig et overblik over vores events.</h3>
-    <div class="sti"></div>
+    <div class="sti">
+        <div class="kommende">
+            <a href="/events">Kommende events</a>
+        </div>
+        <div class="tidligere">
+            <a href="/tidligere">Tidligere events</a>
+        </div>
+        <div class="artister">
+            <a href="/artister">Artister</a>
+        </div>
+    </div>
 </section>
 <section class="tidligere">
     <h2>Året 2023</h2>
@@ -17,3 +27,50 @@ import TidligereCard from "../components/TidligereCard.astro";
         <TidligereCard></TidligereCard>
     </div>
 </section>
+
+<style>
+        a {
+        font-size: var(--Label-large);
+        font-weight: 900;
+        color: var(--color-text-body);
+        outline-style: solid;
+        outline-color: var(--color-background-stroke);
+        outline-width: 2px;
+
+        display: flex;
+        padding: var(--gap3) var(--gap2);
+        justify-content: center;
+        align-items: center;
+    }
+
+    a:hover {
+        color: var(--color-background-button-hover);
+        background-color: var(--color-background-stroke);
+        outline-style: solid;
+        outline-color: var(--color-background-stroke);
+        outline-width: 2px;
+    }
+    
+    .sti{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: var(--gap3);
+    }
+
+    .tidligere a {
+        background-color: var(--color-background-button-secondary);
+        outline-style: solid;
+        outline-color: var(--color-background-button-hover);
+        outline-width: 2px;
+        color: var(--color-background-button-hover);
+    }
+
+    .tidligere a:hover {
+        background-color: var(--color-button-primary);
+        color: var(--color-background-button-secondary);
+        outline-style: solid;
+        outline-color: var(--color-background-button-secondary);
+        outline-width: 2px;
+    }
+</style>
